commit 53: fixed, change locale middleware, language switcher, complete translations components

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -763,7 +763,7 @@
     "History Action": "History Action",
     "Money in Check": "Money in Check",
     "from the history of actions?": " from the history of actions?",
-    "History of recent actions": "History of recent actions",
+    "History of recent actions": "History of actions",
     "Main": "Main",
     "Stocks": "Stocks",
     "Cashman © 2021. All rights reserved.": "Cashman © 2021. All rights reserved.",
@@ -953,7 +953,36 @@
     "Write-downs": "Write-downs",
     "Transfer": "Transfer",
     "Fill out the authorization form": "Fill out the authorization form",
-    "": "",
-    "": "",
-    "": ""
+    "Available amount for debiting": "Available amount for debiting",
+    "It is impossible to make a write-off!": "It is impossible to make a write-off!",
+    "Insufficient funds to perform the operation": "Insufficient funds to perform the operation",
+    "Cashback debited": "Cashback debited",
+    "Cashback debiting was successful!": "Cashback debiting was successful!",
+    "Cashback accrued": "Cashback accrued",
+    "Cashback accrual in": "Cashback accrual in ",
+    "% passed successfully!": "% passed successfully!",
+    "Write-offs": "Write-offs",
+    "Expenses": "Expenses",
+    "You don't have any notifications yet! Make purchases, invite friends and get notifications about every action!": "You don't have any notifications yet! Make purchases, invite friends and get notifications about every action!",
+    "The operation was successful!": "The operation was successful!",
+    "The avatar of your account has been successfully changed!": "The avatar of your account has been successfully changed!",
+    "The operation cannot be performed": "The operation cannot be performed",
+    "You can't replace an avatar with the same photo": "You can't replace an avatar with the same photo",
+    "Your account's email has been changed to": "Your account's email has been changed to ",
+    "The selected user is not an administrator of the company": "The selected user is not an administrator of the company",
+    "The administrator has been successfully removed": "The administrator has been successfully removed",
+    "Administrator successfully added": "Administrator successfully added",
+    "The selected record has been updated": "The selected record has been updated",
+    "Updated": "Updated",
+    "Record successfully added": "Record successfully added",
+    "It will be impossible to cancel the action": "It will be impossible to cancel the action",
+    "Are you sure?": "Are you sure?",
+    "Deleted": "Deleted",
+    "The selected entry has been deleted": "The selected entry has been deleted",
+    "Cancelled": "Cancelled",
+    "The deletion was canceled": "The deletion was canceled",
+    "Something went wrong": "Something went wrong):",
+    "Password Recovery": "Password Recovery",
+    "Enter your new password": "Enter your new password",
+    "Change Password": "Change Password"
 }
