--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -763,7 +763,7 @@
     "History Action": "Действие Истории",
     "Money in Check": "Деньги в чеке",
     "from the history of actions?": " из истории действий?",
-    "History of recent actions": "История последних действий",
+    "History of recent actions": "История действий",
     "Main": "Главная",
     "Stocks": "Акции",
     "Cashman © 2021. All rights reserved.": "Cashman © 2021. Все права защищены.",
@@ -953,7 +953,39 @@
     "Write-downs": "Списания",
     "Transfer": "Перевод",
     "Fill out the authorization form": "Заполните форму для авторизации",
-    "": "",
-    "": "",
-    "": ""
+    "Available amount for debiting": "Доступная сумма для списания",
+    "It is impossible to make a write-off!": "Выполнение списания невозможно!",
+    "Insufficient funds to perform the operation": "Недостаточно средств для выполнения операции",
+    "Cashback debited": "Кэшбек списан",
+    "Cashback debiting was successful!": "Списание кэшбека прошло успешно!",
+    "Cashback accrued": "Кэшбек начислен",
+    "Cashback accrual in": "Начисление кэшбека в ",
+    "% passed successfully!": "% прошло успешно!",
+    "Write-offs": "Списания",
+    "Expenses": "Затраты",
+    "You don't have any notifications yet! Make purchases, invite friends and get notifications about every action!": "У вас пока нет уведомлений! Совершайте покупки, приглашайте друзей и получайте уведомления о каждом действии!",
+    "The operation was successful!": "Операция прошла успешно!",
+    "The avatar of your account has been successfully changed!": "Аватар вашего аккаунта успешно изменен!",
+    "The operation cannot be performed": "Операция не может быть выполнена",
+    "You can't replace an avatar with the same photo": "Нельзя заменить аватар на ту же фотографию",
+    "Your account's email has been changed to": "Почта вашего аккаунта изменена на ",
+    "The selected user is not an administrator of the company": "Выбранный пользователь не является администратором компании",
+    "The administrator has been successfully removed": "Администратор успешно удален",
+    "Administrator successfully added": "Администратор успешно добавлен",
+    "The selected record has been updated": "Выбранная запись была обновлена",
+    "Updated": "Обновлено",
+    "Record successfully added": "Запись успешно добавлена",
+    "It will be impossible to cancel the action": "Отменить действие будет невозможно",
+    "Are you sure?": "Вы уверены?",
+    "Deleted": "Удалено",
+    "The selected entry has been deleted": "Выбранная запись была удалена",
+    "Cancelled": "Отменено",
+    "The deletion was canceled": "Удаление было отменено",
+    "Error": "Ошибка",
+    "Something went wrong": "Что-то пошло не так ):",
+    "Password Recovery": "Восстановление пароля",
+    "Enter your new password": "Введите ваш новый пароль",
+    "Change Password": "Сменить пароль",
+
+
 }
