--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -985,7 +985,7 @@
     "Something went wrong": "Что-то пошло не так ):",
     "Password Recovery": "Восстановление пароля",
     "Enter your new password": "Введите ваш новый пароль",
-    "Change Password": "Сменить пароль",
+    "Change Password": "Сменить пароль"
 
 
 }
